--- a/less/style.less
+++ b/less/style.less
@@ -826,9 +826,11 @@ a.block-link {
     background:url("../images/police-icon.svg") center left no-repeat;
     background-size:80px;
     position:relative;
+    min-height: 70px;
 
     h2 {
       margin:0;
+      text-transform: uppercase;
     }
     h3 {
       margin-top: .25em;
@@ -1962,6 +1964,7 @@ Media Queries
     .officer-text {
       padding-left:90px;
       background-size:50px;
+      min-height:40px;
     }
 
     .officer-logo {
