--- a/templates/_case.html
+++ b/templates/_case.html
@@ -50,7 +50,12 @@
           <div class="officer-group">
             {% for officer in case.officers %}
               {% include 'templates/_officer.html' %}
-              <a href="{{ site_path }}officer/{{ officer.slug }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}"><div class="tooltip">{{ officer.first }} {{ officer.last }}</div></a>
+              {% if officer.slug > 0 %}
+                <a href="{{ site_path }}officer/{{ officer.slug }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}"><div class="tooltip">{{ officer.first }} {{ officer.last }}</div></a>
+              {% else %}
+                <a href="{{ site_path }}officer/{{ officer.slug }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}" disabled><div class="tooltip">{{ officer.first }} {{ officer.last }}</div></a>
+              {% endif %}
+              
             {% endfor %}
            </div>
         </div>
