updating language for social media sharing

--- a/less/style.less
+++ b/less/style.less
@@ -1001,9 +1001,10 @@ label.results-label {
     }
     .officer-text {
       padding-left: 0;
-      padding-top: 40px;
+      padding-top: 50px;
       background: url("../images/police-icon.svg") top center no-repeat;
       background-size: 40px;
+      background-position-y: 20px;
       color: #fff;
       position: relative;
       text-align: center;
@@ -1022,7 +1023,7 @@ label.results-label {
       .total-payments-container {
         color:@cr-lightest;
         font-size:1.25em;
-        margin: 2em;
+        margin: 3em 2em 1.5em 2em;
         line-height: 2;
 
         .total-payments {
