--- a/templates/case.html
+++ b/templates/case.html
@@ -26,7 +26,7 @@
 			  <span class="social-icons">
 				<a><span class="share icon-twitter" onclick="case_twitter(this)"></span></a>
 				<a><span class="share icon-facebook" onclick="case_facebook(this)"></span></a>
-    			<a target="_blank" href="mailto:?subject=This police settlement cost Chicago {{ total_for_payments(case.payments) }}&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/case/{{ case.slug }}"><span class="share icon-mail"></span></a>
+    			<a target="_blank" href="mailto:?subject=This police misconduct lawsuit cost Chicago {{ total_for_payments(case.payments) }}&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/case/{{ case.slug }}"><span class="share icon-mail"></span></a>
 		      </span>
 		    </div>
 		    <div class="secondary-details">
