--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,9 +855,10 @@ label.results-label {
 }
 .detail-wrapper.officer-expanded .officer-text {
   padding-left: 0;
-  padding-top: 40px;
+  padding-top: 50px;
   background: url("../images/police-icon.svg") top center no-repeat;
   background-size: 40px;
+  background-position-y: 20px;
   color: #fff;
   position: relative;
   text-align: center;
@@ -877,7 +878,7 @@ label.results-label {
 .detail-wrapper.officer-expanded .officer-text .total-payments-container {
   color: #ffffff;
   font-size: 1.25em;
-  margin: 2em;
+  margin: 3em 2em 1.5em 2em;
   line-height: 2;
 }
 .detail-wrapper.officer-expanded .officer-text .total-payments-container .total-payments {
