--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -26,7 +26,7 @@
           <span class="social-icons">
             <a><span class="share icon-twitter" onclick="case_twitter(this)"></span></a>
             <a><span class="share icon-facebook" onclick="case_facebook(this)"></span></a>
-            <a target="_blank" href="mailto:?subject=This police settlement cost Chicago $<%= Number(model.total_payments).formatMoney(0) %>&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/case/<%= model.slug %>"><span class="share icon-mail"></span></a>
+            <a target="_blank" href="mailto:?subject=This police misconduct lawsuit cost Chicago $<%= Number(model.total_payments).formatMoney(0) %>&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/case/<%= model.slug %>"><span class="share icon-mail"></span></a>
           </span>
         </div>
 
@@ -84,7 +84,7 @@
       <span class="social-icons">
         <a><span class="share icon-twitter" onclick="officer_twitter(this)"></span></a>
         <a><span class="share icon-facebook" onclick="officer_facebook(this)"></span></a>
-        <a target="_blank" href="mailto:?subject=<%= model.first %> <%= model.last %> was named in police settlements that cost Chicago $<%= Number(model.total_payments).formatMoney(0) %>&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/officer/<%= model.slug %>"><span class="share icon-mail"></span></a>
+        <a target="_blank" href="mailto:?subject=<%= model.first %> <%= model.last %> was named in police misconduct lawsuits that cost Chicago $<%= Number(model.total_payments).formatMoney(0) %>&amp;body=Get the details from the Chicago Reporter investigation: http://{{ ROOT_URL }}/officer/<%= model.slug %>"><span class="share icon-mail"></span></a>
       </span>
     <% } else { %>
       <h2><%= model.first %> <%= model.last %></h2>
