--- a/less/style.less
+++ b/less/style.less
@@ -670,6 +670,10 @@ a.block-link {
     }
   }
 
+  .card-tags {
+    margin-top: 20px;
+  }
+
   .case-details {
     list-style-type: none;
     padding:0;
@@ -778,15 +782,15 @@ a.block-link {
       }
 
       &[disabled]{
-        opacity:.7;
-        background-color:@cr-darkest;
+        background-color:lighten(@cr-darkest,30%);
+        opacity:.8;
         &:hover {
           .tooltip {
-            background-color:@cr-darkest;
+            background-color:lighten(@cr-darkest,30%);
 
             &:after {
               border-color: fade(@cr-darkest, 0%);
-              border-top-color: @cr-darkest;
+              border-top-color: lighten(@cr-darkest,30%);
             }
           }
         }
@@ -815,6 +819,21 @@ a.block-link {
       content: '';
     }
   }
+}
+
+span.display-tag {
+  background-color: lighten(@cr-darkest,30%);
+  color: @cr-lightest;
+  opacity: .8;
+  padding: 4px 6px;
+  line-height: 1.3;
+  display: inline-block;
+  margin: 3px;
+}
+
+.card-row span.display-tag {
+    font-size: .75em;
+    margin: 1px;
 }
 
 .case-detail {
@@ -961,17 +980,7 @@ label.results-label {
       text-align: center;
 
       .tags {
-        text-transform: lowercase;
         margin-bottom:0;
-      }
-      span.display-tag {
-        background-color: lighten(@cr-darkest,30%);
-        color: @cr-lightest;
-        opacity: .8;
-        padding: 4px 6px;
-        line-height: 1.3;
-        display: inline-block;
-        margin: 3px;
       }
     }
     .card-label {
