--- a/templates/case.html
+++ b/templates/case.html
@@ -30,8 +30,8 @@
 		      </span>
 		    </div>
 		    <div class="secondary-details">
-			      <p class="tags">{{ case.tags }}</p>
-			  </div>
+			    <p class="tags">{{ case.tags }}</p>
+			</div>
 		  </div>
 		  
 		</div>
@@ -144,7 +144,11 @@ $(document).ready(function(){
 	var tag_html = "";
 	for (var i=0; i< tags.length; i++){
 		var tag = tags[i];
-		tag_html += "<span class='display-tag'>" + tag + "</span>";
+		if (tag !== 'LGBT') {
+	      tag_html += "<span class='display-tag'>" + tag.toLowerCase() + "</span>";
+	    } else {
+	      tag_html += "<span class='display-tag'>" + tag + "</span>";
+	    } 
 	}
 	tag_area.empty().html(tag_html);
 });
