--- a/templates/_officer.html
+++ b/templates/_officer.html
@@ -1,5 +1,10 @@
 <div class="officer">
-  	<div class="officer-logo"></div>
+	{% if officer.slug %}
+		<div class="officer-logo"><a href="http://{{ ROOT_URL }}/officer/{{ officer.slug }}" class="officer-link"></a></div>
+	{% else %}
+		<div class="officer-logo"></div>
+	{% endif %}
+  	
 	<div class="officer-text">
 		{% if officer.slug %}
 			<h2><a href="http://{{ ROOT_URL }}/officer/{{ officer.slug }}" class="officer-link">{{ officer.first }} {{ officer.last }}</a></h2>
