--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -77,7 +77,12 @@
 
 <script type="text/template" id="officer-tmpl">
 <div class="officer" data-slug="<%= model.slug %>">
-  <div class="officer-logo"></div>
+  
+  <% if (model.slug.length > 0) { %>
+    <div class="officer-logo"><a class="officer-link" href="<%= site_path %>officer/<%= model.slug %>"></a></div>
+  <% } else { %>
+    <div class="officer-logo"></div>
+  <% } %>
   <div class="officer-text">
     <% if (model.slug.length > 0) { %>
       <h2><a class="officer-link" href="<%= site_path %>officer/<%= model.slug %>"><%= model.first %> <%= model.last %></a></h2>
