--- a/less/style.less
+++ b/less/style.less
@@ -1620,22 +1620,36 @@ Intro Page
   }
   #desc h1 {
     font-size: 6em;
-    font-family:@cr-condensed;
     text-transform: uppercase;
-    line-height: 1;
+    line-height: 1.5;
     margin-top:15vh;
     margin-bottom:0;
-    text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+    position:relative;
+    //text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
   }
   #desc h1 .settling {
+    font-family:@cr-condensed;
     font-size:1.25em;
-      letter-spacing: .03em;
+    letter-spacing: .03em;
+    font-weight: normal;
+    background-color:fade(@cr-lightest,80%);
+    padding:4px 8px;
+    color:@cr-alert;
+    position:absolute;
+    left:150px;
   }
   #desc h1 .for {
     display:inline;
     text-transform: lowercase;
     font-weight:300;
     font-size:.5em;
+    background-color:fade(@cr-lightest,80%);
+    padding:4px 8px;
+    color:@cr-darkest;
+    position:absolute;
+    top: 130px;
+    z-index: 2;
+    right: 140px;
   }
   /*#desc h1 .redtext { 
     color:#bd261d;
@@ -1646,13 +1660,24 @@ Intro Page
   #desc h1 .much {
     font-size:1.25em;
   }
+  #desc h1 .toomuch {
+    font-family:@cr-condensed;
+    font-size:1.25em;
+    background-color:fade(@cr-alert,80%);
+    padding:4px 8px;
+    color:@cr-lightest;
+    position:absolute;
+    top: 180px;
+    left: 110px;
+  }
 
   #desc h2 {
     font-weight:300;
     line-height: 1;
-    font-size:2.25em;
-    color:@cr-alert;
-    margin:1em 2em;
+    font-size:2.15em;
+    color:@cr-highlight;
+    margin:500px 4em 1em;
+    text-transform: uppercase;
   }
 
   #desc .scroll {
