--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1264,9 +1264,6 @@ Intro Page
   /*
     Containers
   */
-  /*#desc h1 .redtext { 
-    color:#bd261d;
-  }*/
   /*
     Elements
   */
@@ -1420,9 +1417,14 @@ Intro Page
   font-size: 6em;
   text-transform: uppercase;
   line-height: 1.5;
-  margin-top: 15vh;
-  margin-bottom: 0;
   position: relative;
+  width: 0;
+  margin: 0 auto;
+}
+#cpd-scrolling #desc h1 > span {
+  top: 15vh;
+  position: absolute;
+  padding: 4px 8px;
 }
 #cpd-scrolling #desc h1 .settling {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -1430,10 +1432,8 @@ Intro Page
   letter-spacing: .03em;
   font-weight: normal;
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 4px 8px;
   color: #bd261d;
-  position: absolute;
-  left: 150px;
+  transform: translateX(-53%);
 }
 #cpd-scrolling #desc h1 .for {
   display: inline;
@@ -1441,45 +1441,37 @@ Intro Page
   font-weight: 300;
   font-size: .5em;
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 4px 8px;
   color: #000000;
-  position: absolute;
-  top: 130px;
   z-index: 2;
-  right: 140px;
-}
-#cpd-scrolling #desc h1 .too {
-  font-size: 1.25em;
-}
-#cpd-scrolling #desc h1 .much {
-  font-size: 1.25em;
+  margin-top: 130px;
+  transform: translateX(160%);
 }
 #cpd-scrolling #desc h1 .toomuch {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 1.25em;
   background-color: rgba(189, 38, 29, 0.8);
-  padding: 4px 8px;
   color: #ffffff;
-  position: absolute;
-  top: 180px;
-  left: 110px;
+  margin-top: 180px;
+  transform: translateX(-48%);
 }
 #cpd-scrolling #desc h2 {
   font-weight: 300;
   line-height: 1;
   font-size: 2.15em;
   color: #3d9999;
-  margin: 500px 4em 1em;
+  max-width: 480px;
+  margin: 500px auto 1em;
   text-transform: uppercase;
 }
 #cpd-scrolling #desc .scroll {
   color: #ffffff;
-  display: inline-block;
+  display: block;
   font-family: 'Open Sans Condensed';
-  text-transform: uppercase;
+  text-transform: lowercase;
   text-shadow: 0 0 1px #000;
   line-height: 1;
   margin-top: 2em;
+  font-size: .5em;
 }
 #cpd-scrolling .block {
   width: 100%;
@@ -1644,11 +1636,21 @@ Intro Page
   min-height: 50vh;
 }
 @media screen and (max-width: 760px) {
+  #home #desc {
+    padding: 0 5%;
+  }
   #home #desc h1 {
-    font-size: 3em;
+    transform: scale(0.75);
+  }
+  #home #desc h1 > span {
+    top: 15vh;
   }
   #home #desc h2 {
-    font-size: 1.5em;
+    font-size: 2.25em;
+    margin: 8em auto 1em;
+    max-width: 70%;
+    top: 15vh;
+    position: relative;
   }
   #home .block h3 {
     font-size: 2em;
@@ -1658,6 +1660,21 @@ Intro Page
   }
   #home .spacer.vh1.half {
     min-height: 25vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  #home #desc h1 {
+    transform: scale(0.5);
+  }
+  #home #desc h1 > span {
+    top: 35vh;
+  }
+  #home #desc h2 {
+    font-size: 1.5em;
+    margin: 3em auto 1em;
+    max-width: 70%;
+    top: 35vh;
+    position: relative;
   }
 }
 /* ==========================================================================
