--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1355,7 +1355,7 @@ Intro Page
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999999;
+  z-index: 99;
   padding-top: 62px;
 }
 #cpd-scrolling .rect-wrap {
