adding new photos to homepage in progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1572,6 +1572,9 @@ Intro Page
   background-image: url("../images/06-LE0A1948.jpg");
 }
 #cpd-scrolling #bg-11 {
+  background-image: url("../images/srupolo_legreir-funeral-5.jpg");
+}
+#cpd-scrolling #bg-13 {
   background-image: url("../images/02-IMG_9158.jpg");
 }
 #cpd-scrolling #bg-11-overlay {
