--- a/less/style.less
+++ b/less/style.less
@@ -1789,6 +1789,10 @@ Intro Page
     //background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
   }
   #bg-11 {
+    background-image: url("../images/srupolo_legreir-funeral-5.jpg");
+  }
+  //#bg-12 is transition image from intro to blurry app background
+  #bg-13 {
     background-image: url("../images/02-IMG_9158.jpg");
   }
   #bg-11-overlay {
