--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -193,53 +193,53 @@
           
             <option value="Conspiracy">Conspiracy</option>
           
-            <option value="Deliberate indifference">Deliberate indifference</option>
+            <option value="Deliberate Indifference">Deliberate Indifference</option>
           
-            <option value="Due process violation">Due process violation</option>
+            <option value="Due Process Violation">Due Process Violation</option>
           
-            <option value="Equal protection violation">Equal protection violation</option>
+            <option value="Equal protection violation (racial bias)">Equal protection violation (racial bias)</option>
           
             <option value="Excessive force">Excessive force</option>
           
-            <option value="Failure to intervene">Failure to intervene</option>
+            <option value="Failure to Intervene">Failure to Intervene</option>
           
-            <option value="Failure to provide medical care">Failure to provide medical care</option>
+            <option value="Failure to Provide Medical Care">Failure to Provide Medical Care</option>
           
-            <option value="False arrest">False arrest</option>
+            <option value="False Arrest">False Arrest</option>
           
-            <option value="False imprisonment">False imprisonment</option>
+            <option value="False Imprisonment">False Imprisonment</option>
           
-            <option value="First Amendment violation">First Amendment violation</option>
+            <option value="First Amendment Violation">First Amendment Violation</option>
           
-            <option value="Illegal/unreasonable search">Illegal/unreasonable search</option>
+            <option value="Illegal/Unreasonable Search">Illegal/Unreasonable Search</option>
           
-            <option value="Illegal/unreasonable seizure">Illegal/unreasonable seizure</option>
+            <option value="Illegal/Unreasonable Seizure">Illegal/Unreasonable Seizure</option>
           
             <option value="Illinois Domestic Violence Act">Illinois Domestic Violence Act</option>
           
-            <option value="Intentional infliction of emotional distress">Intentional infliction of emotional distress</option>
+            <option value="Intentional Infliction of Emotional Distress">Intentional Infliction of Emotional Distress</option>
           
-            <option value="Intrusion/invasion of privacy">Intrusion/invasion of privacy</option>
+            <option value="Intrusion/Invasion of Privacy">Intrusion/Invasion of Privacy</option>
           
-            <option value="Malicious prosecution">Malicious prosecution</option>
+            <option value="Malicious Prosecution">Malicious Prosecution</option>
           
             <option value="Negligence">Negligence</option>
           
-            <option value="Other civil rights violations">Other civil rights violations</option>
+            <option value="Other 1983/Civil Rights Violations">Other 1983/Civil Rights Violations</option>
           
-            <option value="Policies and practices">Policies and practices</option>
+            <option value="Policies and Practices">Policies and Practices</option>
           
-            <option value="Reckless conduct">Reckless conduct</option>
+            <option value="Reckless Conduct">Reckless Conduct</option>
           
-            <option value="Survival action">Survival action</option>
+            <option value="Survival Action">Survival Action</option>
           
             <option value="Trespass">Trespass</option>
           
-            <option value="Unlawful detention">Unlawful detention</option>
+            <option value="Unlawful Detention">Unlawful Detention</option>
           
-            <option value="Willful and wanton misconduct">Willful and wanton misconduct</option>
+            <option value="Willful and Wanton Misconduct">Willful and Wanton Misconduct</option>
           
-            <option value="Wrongful death">Wrongful death</option>
+            <option value="Wrongful Death">Wrongful Death</option>
           
         </select>
       </div>
