--- a/less/style.less
+++ b/less/style.less
@@ -1420,16 +1420,56 @@ a:hover {
 /* ==========================================================================
 Intro Page
 ========================================================================== */
-#home {
-  background-color: rgba(0,0,0,1);
+#intro-controls {
+  position:fixed;
+  bottom:0;
+  left: 10px;
+  z-index:999;
+  font-family:@cr-condensed;
+  font-size: 1.15em;
+  &>div {
+    padding:10px;
+    border:1px solid @cr-darkest;
+    border-bottom:none;
+    background-color:@cr-lightest;
+    color:@cr-darkest;
+    opacity:.8;
 
-  .navbar {
+    &:hover {
+      cursor:pointer;
+      opacity:1;
+    }
+  }
+  #skip-intro {
     display:none;
   }
   #replay-intro {
-    position:absolute;
-    top:100px;
-    z-index:5;
+    display:block;
+  }
+}
+#home {
+  background-color: rgba(0,0,0,1);
+
+  &.filter-cases, &.filter-officers{
+    #intro-controls {
+      #skip-intro {
+        display:none;
+      }
+      #replay-intro {
+        display:block;
+      }
+    }
+  }
+  #intro-controls {
+    #skip-intro {
+      display:block;
+    }
+    #replay-intro {
+      display:none;
+    }
+  }
+
+  .navbar {
     display:none;
   }
   #the-app {
